--- a/003 - WebServer/Principale.html
+++ b/003 - WebServer/Principale.html
@@ -5,7 +5,7 @@
         <title>Test</title>
     </head>
     <body>
-        <h1>Questa è la pagina principale</h1>
+        <h1>Questa è la pagina Principale</h1>
             <button type="button" onclick="location.href='/Studenti'">Studenti</button>
             <button type="button" onclick="location.href='/Professori'">Professori</button>
             <button type="button" onclick="location.href='/Genitori'">Genitori</button>
